force-app/main/default/objects/cgcloud__Org_Unit_User__c/cgcloud__Org_Unit_User__c.object-meta.xml
<CustomObject>
    <description>Holds the details of the relationship between organization unit and user.</description>
    <label>Org Unit User</label>
    <nameField>
        <displayFormat>OUU-{0000}</displayFormat>
        <label>Org Unit User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Unit Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>