force-app/main/default/objects/cgcloud__Org_Unit_User__c/fields/cgcloud__Org_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Org_Unit__c</fullName>
    <description>Reference to an org unit assigned to a user.</description>
    <label>Org Unit</label>
    <lookupFilter>
        <active>false</active>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Org_Unit__c</referenceTo>
    <relationshipLabel>Org Unit Users</relationshipLabel>
    <relationshipName>Org_Unit_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>