force-app/main/default/objects/cgcloud__Org_Unit_User__c/fields/cgcloud__User__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to a user assigned to an org unit.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Org_Unit_Users</relationshipName>
    <type>Lookup</type>
</CustomField>